# maze

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/assets/models/: ground.mtl
client/assets/models/Sci-fi_SniperRifle/: sniper_1001_Base_Color.png:Zone.Identifier
client/assets/models/ground/: ground.mtl
client/assets/models/wall/: wall.mtl
client/assets/models/weapons/smg/: smg.fbx  smg.mtl
client/assets/shaders/: ground.frag  ground.vert  pbr.frag  pbr.vert  skybox.vert  square.vert
client/src/: audio.rs  engine.rs  graphics.rs  input.rs  level.rs  main.rs  maze.rs  mesh.rs  player.rs  renderer.rs  resource_manager.rs  shader.rs  state.rs  utils.rs  weapon.rs
scripts/: build.sh
server/: Cargo.toml
server/src/: main.rs
shared/src/: lib.rs
