[package]
name = "maze"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "client",
    "server",
    "shared",
]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
sdl2 = { version = "0.36", features = ["image", "ttf"] }
gl = "0.14"
image = "0.25.6"
shared = { path = "./shared" }

[[bin]]
name = "client"
path = "client/src/main.rs"

[[bin]]
name = "server"
path = "server/src/main.rs"
