[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl2 = { version = "0.36", features = ["image", "ttf"] }
shared = { path = "../shared" }
gl = "0.14"
image = "0.25.6"
nalgebra = "0.33.2"
tobj = "4.0"
once_cell = "1.21.3"
rusttype = "0.9.3"
rand = "0.9.1"
rodio = "0.20.1"
anyhow = "1.0.98"
